# colobus_firmware

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  release.yml
include/: BuildVersion.h.in  crc.h  lightning.h  macros.h  pio_i2c.h  probe.h  puart.h  swd.h  tristar.h  tusb_config.h  usbhub.h  usbmux.h
pio/: i2c.pio  lightning.pio  swd.pio  uart.pio
src/: crc.c  lightning.c  main.c  pio_i2c.c  probe.c  puart.c  swd.c  tristar.c  usb_descriptors.c  usbhub.c  usbmux.c
src/usbliter8/: bus.c  bus.h  exploit.c  exploit.h  log.h  usb.c  usb.h
src/usbliter8/pio_usb/: CMakeLists.txt
src/usbliter8/pio_usb/src/: pio_usb_configuration.h  usb_crc.c
src/usbliter8/resources/: descriptors_t8020.h  handler_t8020.h  shellcode_t8020.h
